--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
             font-size: 30%;
         }
 
+        .hidden {
+            display: none !important;
+        }
+
 
         /* Header */
         header {
