--- a/index.html
+++ b/index.html
@@ -777,6 +777,27 @@
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
         }
 
+        .pricing-text h3 {
+            font-size: 2.5rem;
+            font-weight: 300;
+            margin-bottom: 2rem;
+            color: #fff;
+            line-height: 1.2;
+        }
+
+        .pricing-text p {
+            font-size: 1.1rem;
+            font-family: 'MainFont';
+            color: white;
+            margin-bottom: 1.5rem;
+            line-height: 1.8;
+        }
+
+        .pricing-text .highlight {
+            color: #005F4E;
+            font-weight: 600;
+        }
+
         /* Product Detail Modal */
         .product-modal,
         .product-modal1 {
@@ -1472,6 +1493,19 @@
                             </button>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="pricing-text">
+                    <h3>How our pricing works</h3>
+                    <p>We don’t believe in charging high prices for our products. Thanks to our system, we’re no longer dependent on inflated pricing to stay afloat.<br>Instead, we’ve chosen to reduce our costs to the absolute minimum — so that more people can afford to take their first successful steps into the world of financial markets.<br>Our pricing covers only the essentials:</p>
+                    <p>• Fair employee wages</p>
+                    <p>• Taxes and legal compliance</p>
+                    <p>• Office rent and operational costs</p>
+                    <p>• Basic infrastructure and maintainance</p>
+                    <p>That’s it. No inflated margins. No hidden fees. Just what’s necessary to keep things running — and accessible for everyone.</p>
                 </div>
             </div>
         </section>
