--- a/index.html
+++ b/index.html
@@ -259,19 +259,16 @@
         /*cart modal*/
         .cart-modal-overlay {
             position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.7);
-            backdrop-filter: blur(5px);
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            top: 80px; /* oder Höhe deines Headers */
+            right: 20px;
+            width: auto;
+            height: auto;
+            background: none; /* kein dunkler Overlay-Hintergrund */
+            backdrop-filter: none;
             z-index: 1000;
             opacity: 0;
             visibility: hidden;
-            transition: all 0.3s ease;
+            transition: opacity 0.3s ease;
         }
 
         .cart-modal-overlay.show {
@@ -283,19 +280,23 @@
             background: linear-gradient(145deg, #ffffff, #f0f0f0);
             border-radius: 20px;
             padding: 30px;
-            max-width: 450px;
+            max-width: 350px;
             width: 100%;
             box-shadow: 
                 0 20px 60px rgba(0, 0, 0, 0.3),
                 inset 0 1px 0 rgba(255, 255, 255, 0.6);
             position: relative;
-            transform: scale(0.9);
-            animation: cartModalAppear 0.3s ease-out forwards;
+            animation: cartSlideFromTop 0.3s ease-out forwards;
         }
 
-        @keyframes cartModalAppear {
+        @keyframes cartSlideFromTop {
+            from {
+                transform: translateY(-20px);
+                opacity: 0;
+            }
             to {
-                transform: scale(1);
+                transform: translateY(0);
+                opacity: 1;
             }
         }
 
