--- a/index.html
+++ b/index.html
@@ -299,6 +299,25 @@
             animation: cartSlideFromTop 0.3s ease-out forwards;
         }
 
+        @media (max-width: 768px) {
+            .cart-modal-overlay {
+                top: 0;
+                right: 0;
+                left: 0;
+                bottom: 0;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background: rgba(0, 0, 0, 0.6); /* optional: wieder dunkler Hintergrund für mobile UX */
+            }
+
+            .cart-modal {
+                max-width: 90%;
+                width: 100%;
+                margin: 0 20px;
+            }
+        }
+
         @keyframes cartSlideFromTop {
             from {
                 transform: translateY(-20px);
