--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
         @media (max-width: 768px) {
             .btn-cart .quantity {
-                opacity: 1;
+                opacity: 1 !important!;
                 color: #005F4E !important;
                 -webkit-text-fill-color: #005F4E !important;
                 text-decoration: none !important;
