--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         }
 
         .cart-modal {
-            background: linear-gradient(145deg, #ffffff, #f0f0f0);
+            background: #0b0b0b;
             border-radius: 20px;
             padding: 30px;
             max-width: 350px;
@@ -399,12 +399,12 @@
 
         .cart-product-name {
             font-weight: 600;
-            color: #333;
+            color: white;
             font-size: 16px;
         }
 
         .cart-product-price {
-            color: #667eea;
+            color: #005F4E;
             font-weight: 700;
             font-size: 16px;
         }
