--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         }
 
         .cart-modal {
-            background: #0b0b0b;
+            background: #101010;
             border-radius: 20px;
             padding: 30px;
             max-width: 350px;
@@ -410,7 +410,7 @@
         }
 
         .cart-total-section {
-            background: linear-gradient(145deg, #f8f9ff, #e8eaff);
+            background: linear-gradient(145deg, #181818, #232324);
             padding: 20px;
             border-radius: 15px;
             margin-bottom: 25px;
@@ -427,7 +427,7 @@
         .cart-total-amount {
             font-size: 32px;
             font-weight: 800;
-            background: linear-gradient(45deg, #667eea, #764ba2);
+            background: linear-gradient(7deg,rgba(0, 95, 78, 1) 0%, rgba(0, 28, 24, 1) 100%)
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
