--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         .cart-modal-title {
             font-size: 28px;
             font-weight: 700;
-            background: linear-gradient(45deg, #667eea, #764ba2);
+            background: linear-gradient(7deg,rgba(0, 95, 78, 1) 0%, rgba(0, 28, 24, 1) 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -427,6 +427,7 @@
         .cart-total-amount {
             font-size: 32px;
             font-weight: 800;
+            background: #005F4E;
             background: linear-gradient(7deg,rgba(0, 95, 78, 1) 0%, rgba(0, 28, 24, 1) 100%)
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
