--- a/index.html
+++ b/index.html
@@ -339,7 +339,8 @@
         .cart-modal-title {
             font-size: 28px;
             font-weight: 700;
-            background: linear-gradient(7deg,rgba(0, 95, 78, 1) 0%, rgba(0, 28, 24, 1) 100%);
+            font-family: 'HeadlineFont';
+            background: white;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -458,23 +459,23 @@
         }
 
         .cart-button1 {
-            background: linear-gradient(145deg, #667eea, #764ba2);
+            background: linear-gradient(7deg,rgba(0, 95, 78, 1) 0%, rgba(0, 28, 24, 1) 100%);
             color: white;
         }
 
         .cart-button1:hover {
             transform: translateY(-2px);
-            box-shadow: 0 8px 25px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 8px 25px #004033;
         }
 
         .cart-button2 {
-            background: linear-gradient(145deg, #ff6b6b, #ee5a24);
+            background: linear-gradient(7deg,rgba(0, 95, 78, 1) 0%, rgba(0, 28, 24, 1) 100%);
             color: white;
         }
 
         .cart-button2:hover {
             transform: translateY(-2px);
-            box-shadow: 0 8px 25px rgba(255, 107, 107, 0.4);
+            box-shadow: 0 8px 25px #004033;
         }
 
         .cart-empty {
