--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
         }
 
         .cart-modal-title {
-            font-size: 20%;
+            font-size: 28px;
             font-weight: 700;
             font-family: 'HeadlineFont';
             background: white;
