--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
         }
 
         .cart-products-button {
-            background: linear-gradient(145deg, #667eea, #764ba2);
+            background: linear-gradient(7deg,rgba(0, 95, 78, 1) 0%, rgba(0, 28, 24, 1) 100%);
             color: white;
             border: none;
             padding: 15px 30px;
@@ -507,7 +507,7 @@
 
         .cart-products-button:hover {
             transform: translateY(-3px);
-            box-shadow: 0 8px 25px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 8px 25px #004033;
         }
 
         #aboutOverlay,
