--- a/index.html
+++ b/index.html
@@ -293,8 +293,7 @@
             max-width: 350px;
             width: 100%;
             box-shadow: 
-                0 20px 60px rgba(0, 0, 0, 0.3),
-                inset 0 1px 0 rgba(255, 255, 255, 0.6);
+                0 20px 60px rgba(0, 0, 0, 0.3);
             position: relative;
             animation: cartSlideFromTop 0.3s ease-out forwards;
         }
@@ -416,7 +415,7 @@
             border-radius: 15px;
             margin-bottom: 25px;
             text-align: center;
-            border: 2px solid rgba(102, 126, 234, 0.2);
+            border: 1px solid #383838;
         }
 
         .cart-total-label {
