--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%);
-            color: #ffffff;
+            color: #0d0d0d;
             min-height: 100vh;
             line-height: 1.6;
             max-width: 100vw;
