--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
             transition: all 0.3s ease;
             text-decoration: none;
             display: inline-block;
-            box-shadow: 0 4px 15px rgba(102, 126, 234, 0.3);
+            box-shadow: 0 4px 15px #00403380;
         }
 
         .cart-products-button:hover {
