--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             line-height: 1.6;
             max-width: 100vw;
             overflow-x: hidden;
+            padding-top: env(safe-area-inset-top);
         }
 
         .container {
