--- a/index.html
+++ b/index.html
@@ -823,7 +823,7 @@
             font-size: 1.1rem;
             font-family: 'MainFont';
             color: white;
-            margin-bottom: 1.5rem;
+            margin-bottom: 800px;
             line-height: 1.8;
         }
 
