--- a/index.html
+++ b/index.html
@@ -811,6 +811,10 @@
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
         }
 
+        .pricing-text {
+            margin-bottom: 80px;
+        }
+
         .pricing-text h3 {
             font-size: 2.5rem;
             font-weight: 300;
@@ -823,7 +827,7 @@
             font-size: 1.1rem;
             font-family: 'MainFont';
             color: white;
-            margin-bottom: 800px;
+            margin-bottom: 1.5rem;
             line-height: 1.8;
         }
 
