--- a/downloads.html
+++ b/downloads.html
@@ -502,7 +502,10 @@
                         <p class="download-description">
                             The fitting Software for the Submarine-Membership
                         </p>
-                        <a href="#" class="download-btn" onclick="downloadSoftware('submarine')">
+                        <!-- Direkter Downloadlink -->
+                        <a href="docs/SubmarinePlaceholder.pdf"
+                            class="download-btn"
+                            download="Submarine.pdf">
                             Download Submarine
                         </a>
                     </div>
