--- a/downloads.html
+++ b/downloads.html
@@ -515,9 +515,11 @@
                         <h3 class="download-title">Moses</h3>
                         <p class="download-description">
                             Coming soon!
-                        </p>
-                        <a href="#" class="download-btn" onclick="downloadSoftware('moses')">
-                            Download Moses placeholder
+                        <!-- Direkter Downloadlink -->
+                        <a href="docs/MosesPlaceholder.pdf"
+                            class="download-btn"
+                            download="Moses.pdf">
+                            Download Moses
                         </a>
                     </div>
                 </div>
