--- a/contact.html
+++ b/contact.html
@@ -164,19 +164,21 @@
         }
 
         .hero h1 {
-            font-size: clamp(0.9rem, 1.8vw, 1.6rem);
+            font-size: clamp(2rem, 4vw, 3.5rem);
             font-family: 'HeadlineFont';
             margin-bottom: 20px;
             opacity: 0;
             animation: fadeInUp 1s ease forwards;
-            max-width: 90%;
-            margin-left: auto;
-            margin-right: auto;
-            word-break: break-word;
+        }
+
+        @media (max-width: 768px) {
+            .hero h1 {
+                font-size: 4vw;
+            }
         }
 
         .hero p {
-            font-size: clamp(0.8rem, 1.2vw, 1.1rem);
+            font-size: clamp(1rem, 2vw, 1.2rem);
             font-family: 'MainFont';
             margin-bottom: 40px;
             opacity: 0;
