--- a/index.html
+++ b/index.html
@@ -536,18 +536,19 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
+            animation: fadeInUp 1s ease forwards;
         }
 
         .hero p {
             font-size: 1vw;
             color: #005F4E;
             margin-bottom: 2rem;
+            animation: fadeInUp 1s ease 0.3s forwards;
         }
 
         @media (max-width: 768px) {
             .hero p {
                 font-size: 3vw;
-                color: #005F4E;
                 margin-bottom: 2rem;
             }
         }
