--- a/about.html
+++ b/about.html
@@ -669,6 +669,14 @@
             });
         });
 
+        window.addEventListener('load', () => {
+            window.scrollTo(0, 0);
+            // Falls du verhindern willst, dass Back/Forward die Position wiederherstellen:
+            if ('scrollRestoration' in history) {
+                history.scrollRestoration = 'manual';
+            }
+        });
+
     </script>
 </body>
 </html>
