--- a/about.html
+++ b/about.html
@@ -570,7 +570,7 @@
 
         <section class="team-section" id="team">
             <div class="container">
-                <h2>Unser Team</h2>
+                <h2>Our Team</h2>
                 <div class="team-grid">
                     <div class="team-card">
                         <div class="team-pic"> <img src="images/Team/CEO.png"></div>
