--- a/index.html
+++ b/index.html
@@ -1978,6 +1978,15 @@
             }
         });
     });
+
+    window.addEventListener('load', () => {
+        window.scrollTo(0, 0);
+        // Falls du verhindern willst, dass Back/Forward die Position wiederherstellen:
+        if ('scrollRestoration' in history) {
+            history.scrollRestoration = 'manual';
+        }
+    });
+
 </script>
 
 </body>
