--- a/index.html
+++ b/index.html
@@ -1606,7 +1606,13 @@
                 <!-- Buttons -->
                 <div class="cart-button-container">
                     <button id="cartButton1" class="cart-button cart-button1">Zur Kasse</button>
-                    <button id="cartButton2" class="cart-button cart-button2 hidden">Spezialbestellung</button>
+                    <button 
+                        id="cartButton2" 
+                        class="cart-button cart-button2 hidden"
+                        onclick="window.location.href='requestaccess.html';"
+                        >
+                        Spezialbestellung
+                    </button>
                 </div>
             </div>
         </div>
