--- a/requestaccess.html
+++ b/requestaccess.html
@@ -32,7 +32,7 @@
             max-width: 450px;
             text-align: center;
             position: relative;
-            overflow: hidden;
+            overflow: **visible**;
         }
 
         .container::before {
